Funciones del boton listo

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1, maximum-scale=2"> -->
-
+    <link href='http://fonts.googleapis.com/css?family=Signika:300,400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="e1/css/scene.css"> <!-- estilo especial de la maquina -->
     <link rel="stylesheet" href="css/app.css"> <!-- estilo base de la maquina -->
     <link rel="stylesheet" href="css/hover.css"> <!-- animaciones para mouseHover -->
