--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
         </div>
         
         <div id="header"><div id="titulo"> Titulo de la maquina </div></div>
+        <div id="blocklayer"></div>
         <div id="footer">
             <div id="ready" class="botonesui grow-rotate"></div>
             <div id="restart" class="botonesui grow-rotate"></div>
