--- a/www/index.html
+++ b/www/index.html
@@ -37,16 +37,21 @@
             <div id="bgmid">
                 <div id="hbl" class="headpart"></div>
                 <div id="hbm" class="headpart"></div>
-                <div id="hbr" class="headpart"></div>
+                <div id="hbr" class="headpart noscale"></div>
             </div>
-            <div id="titulo"> Titulo de la maquina </div>
+            <div id="titulo" class="noscale"> Titulo de la maquina </div>
         </div>
         <div id="blocklayer"></div>
         <div id="footer">
-            <div id="ready" class="botonesui animsBtnUI"></div>
-            <div id="restart" class="botonesui animsBtnUI"></div>
+            <div id="bgfoot">
+                <div id="fbl" class="footpart"></div>
+                <div id="fbm" class="footpart"></div>
+                <div id="fbr" class="footpart"></div>
+            </div>
+            <div id="ready" class="botonesui animsBtnUI noscale"></div>
+            <div id="restart" class="botonesui animsBtnUI noscale"></div>
         </div>
-        <div id="overallmisc">
+        <div id="overallmisc noscale">
             <div id="good" class="popsplash animsplash"></div>
             <div id="tryagain" class="popsplash animsplash"></div>
             <div id="seeanswer" class="popsplash animsplash"></div>
